// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneInput Backspace Should erase digit at 0 1`] = `
Array [
  "+7 906 123-45-67",
  0,
  0,
]
`;

exports[`PhoneInput Backspace Should erase digit at 1 1`] = `
Array [
  "+7 906 123-45-67",
  0,
  0,
]
`;

exports[`PhoneInput Backspace Should erase digit at 4 1`] = `
Array [
  "+7 061 234-56-7",
  3,
  3,
]
`;

exports[`PhoneInput Backspace Should erase digit at 7 1`] = `
Array [
  "+7 901 234-56-7",
  5,
  5,
]
`;

exports[`PhoneInput Backspace Should erase digit at 8 1`] = `
Array [
  "+7 906 234-56-7",
  6,
  6,
]
`;

exports[`PhoneInput Backspace Should erase digit at 11 1`] = `
Array [
  "+7 906 124-56-7",
  9,
  9,
]
`;

exports[`PhoneInput Backspace Should erase digit at 15 1`] = `
Array [
  "+7 906 123-45-7",
  13,
  13,
]
`;

exports[`PhoneInput Backspace Should erase digit at 16 1`] = `
Array [
  "+7 906 123-45-6",
  15,
  15,
]
`;

exports[`PhoneInput Clipboard Should paste "+7 906 123-45-67" onto "" string  at 0 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "+7 906 123-45-67" onto "" string  at 1 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "+7 906 123-45-67" onto "" string  at 3 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "+7 906 123-45-67" onto "9096005040" string  at 0 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "+7 906 123-45-67" onto "9096005040" string  at 1 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "+7 906 123-45-67" onto "9096005040" string  at 3 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "8 906 123-45-67" onto "" string  at 0 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "8 906 123-45-67" onto "" string  at 3 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "8 906 123-45-67" onto "9096005040" string  at 0 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "8 906 123-45-67" onto "9096005040" string  at 3 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "906 123-45-67" onto "" string  at 0 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "906 123-45-67" onto "" string  at 3 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "906 123-45-67" onto "9096005040" string  at 0 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Clipboard Should paste "906 123-45-67" onto "9096005040" string  at 3 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;

exports[`PhoneInput Inserting digits Should insert digit at 0 1`] = `
Array [
  "+7 890 612-34-56",
  4,
  4,
]
`;

exports[`PhoneInput Inserting digits Should insert digit at 2 1`] = `
Array [
  "+7 890 612-34-56",
  4,
  4,
]
`;

exports[`PhoneInput Inserting digits Should insert digit at 4 1`] = `
Array [
  "+7 980 612-34-56",
  5,
  5,
]
`;

exports[`PhoneInput Inserting digits Should insert digit at 5 1`] = `
Array [
  "+7 908 612-34-56",
  6,
  6,
]
`;

exports[`PhoneInput Inserting digits Should insert digit at 6 1`] = `
Array [
  "+7 906 812-34-56",
  8,
  8,
]
`;

exports[`PhoneInput Inserting digits Should insert digit at 15 1`] = `
Array [
  "+7 906 123-45-68",
  16,
  16,
]
`;

exports[`PhoneInput Inserting digits Should insert digit at 16 1`] = `
Array [
  "+7 906 123-45-67",
  16,
  16,
]
`;
